[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-builder-agent"
version = "0.1.0"
description = "API-first knowledge graph pipeline with MCP-ready architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Graph Builder Agent Contributors"}
]
keywords = ["knowledge-graph", "graph-rag", "mcp", "nlp", "extraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "tinboker-shared",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-toon>=0.1.0",
    "spacy>=3.7.0",
    "typer>=0.9.0",
    "requests>=2.31.0",
    "feedparser>=6.0.0",
    "python-dateutil>=2.8.0",
    "urllib3>=2.0.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=0.0.3",
    "langchain-openai>=0.0.5",
    "google-generativeai>=0.3.0",
    "google-genai>=0.1.0",
    "google-cloud-storage>=2.0.0",
    "Pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-requests>=2.31.0",
    "types-pyyaml>=6.0.0",
]
langdetect = [
    "langdetect>=1.0.9",
]

[project.scripts]
ng = "apps.cli.main:app"

[tool.uv.sources]
tinboker-shared = { workspace = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "configs*", "ingest*", "extract*", "enrich*", "graph*", "pipelines*", "mcp*", "utils*", "tests*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

